--- a/app/css/style.less
+++ b/app/css/style.less
@@ -429,8 +429,19 @@ label{
 }
 
 .form-group {
+    &.no-margin {
+        margin-bottom: 0px;
+    }
+
     .form-group {
         margin-bottom: 0px;
+    }
+
+    label {
+        &.bottom {
+            margin-top: 30px;
+            font-size: 14px;
+        }
     }
 }
 
@@ -929,4 +940,22 @@ label{
             height: 300px;
         }
     }
+}
+
+.neon-well {
+    background-color: @main-background-lighten;
+    border-color: @border-color;
+    border-radius: 4px;
+    border-style: solid;
+    border-width: 1px;
+    margin: 0px 0px 15px;
+    padding: 9px;
+}
+
+.neon-well-dark {
+    background-color: @main-background-darken;
+}
+
+.neon-well-thin {
+    padding: 4px;
 }
