--- a/app/partials/directives/map.html
+++ b/app/partials/directives/map.html
@@ -16,7 +16,7 @@
         <div class="all-layer-options">
             <!-- Container for a new map layer. -->
             <div class="form-group layer-options-container" ng-show="(options.newLayer.editing)">
-                <div class="form-group layer-options-well new-layer">
+                <div class="form-group layer-options-well neon-well new-layer">
                     <div class="layer-options-row">
                         <div class="btn-group layer-options-col layer-options-col-wide">
                             <label class="btn btn-default" ng-cancel-drag ng-class="{true: 'active', false: ''}[options.newLayer.visible === true]" title="Toggle Layer Visibility" ng-show="(options.newLayer.editing)">
@@ -136,7 +136,7 @@
             <!-- The ng-drag and ng-drop directives are from the ngDraggable library. -->
             <div class="form-group layer-options-container" ng-drop="true" ng-drop-success="reorderLayer($index, $data)" ng-repeat="layer in options.layers | reverse">
                 <div ng-drag="true" ng-drag-data="layer">
-                    <div class="form-group layer-options-well">
+                    <div class="form-group layer-options-well neon-well neon-well-dark">
                         <div class="layer-options-row">
                             <div class="btn-group layer-options-col layer-options-col-wide">
                                 <label class="btn btn-default" ng-cancel-drag ng-class="{true: 'active', false: ''}[layer.visible === true]" title="Toggle Layer Visibility">
