NEON-1400 Added relation configuration to the custom dataset popup.

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -438,9 +438,12 @@ label{
     }
 
     label {
+        &.top {
+            margin-top: 10px;
+        }
+
         &.bottom {
             margin-top: 30px;
-            font-size: 14px;
         }
     }
 }
